c/examples/writing-a-c-compiler-tests/tests/chapter_8/invalid_semantics/out_of_scope_loop_variable.c
int main(void)
{
    for (i = 0; i < 1; i = i + 1)
    {
        return 0;
    }
}